--- a/MultiLink/Views/Win.xaml
+++ b/MultiLink/Views/Win.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <TextBox Name="TxtBaseUrl" />
         <Grid Grid.Row="1">
@@ -40,6 +41,17 @@
                     Style="{DynamicResource AccentedSquareButtonStyle}"
                     BorderThickness="0"
                     Click="BtnStart_Click" />
+        </Grid>
+        <Grid Grid.Row="4">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <TextBox Name="TxtDlPath" Text="C:\Users\DemiDev\Downloads" />
+            <Button Name="BtnDl" Content="Manual Download" Grid.Column="1" 
+                    Click="BtnDl_Click"/>
+            <mah:MetroProgressBar Name="MpbDl" Grid.ColumnSpan="2"
+                                  Visibility="Collapsed" Background="White" />
         </Grid>
     </Grid>
 </mah:MetroWindow>
